--- a/src/app/components/hero-banner/hero-banner.component.html
+++ b/src/app/components/hero-banner/hero-banner.component.html
@@ -5,7 +5,7 @@
     <p class="subtitle">{{ subtitle }}</p>
     <form (submit)="suscribirse(email.value)" class="newsletter-form" aria-label="Suscripción" id="newsletter-form">
       <input #email type="email" placeholder="Tu correo electrónico" aria-label="Tu correo electrónico">
-      <button type="submit">Suscribirme</button>
+      <button type="submit" class="btn btn-secondary">Suscribirme</button>
     </form>
   </div>
 </section>
