--- a/src/app/components/pages/cuentos/cuentos.component.html
+++ b/src/app/components/pages/cuentos/cuentos.component.html
@@ -55,8 +55,8 @@
         <option value="4">4⭐ o más</option>
       </select>
     </div>
-    <button class="btn-filter" type="button">Filtrar</button>
-    <button class="btn-clear" type="button" (click)="limpiarFiltros()">Limpiar</button>
+    <button class="btn btn-secondary" type="button">Filtrar</button>
+    <button class="btn btn-ghost" type="button" (click)="limpiarFiltros()">Limpiar</button>
   </div>
   <a class="cta-link" href="#">¿No sabes dónde empezar? → Ver los 5 más leídos</a>
   <div class="grid-cuentos">
