--- a/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-content">
   <h2>Bienvenido, Admin!</h2>
 
-  <img appLazyLoad="assets/libros_killa.png" alt="Banner" class="dashboard-banner" />
+  <img src="/assets/libros_killa.png" appLazyLoad="assets/libros_killa.png" alt="Banner" class="dashboard-banner" />
 
   <div *ngIf="errorMensaje" class="error-mensaje">
     <p>{{ errorMensaje }}</p>
