--- a/src/app/components/admin-drawer/admin-drawer.component.scss
+++ b/src/app/components/admin-drawer/admin-drawer.component.scss
@@ -7,8 +7,9 @@ $drawer-width: 260px;
   border-right: 1px solid rgba($text-dark, .1);
   width: $drawer-width;
   height: 100vh;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   transform: translateX(-100%);
   transition: transform .3s ease;
   z-index: 1000;
@@ -34,7 +35,6 @@ $drawer-width: 260px;
   }
   &.open {
     transform: translateX(0);
-    position: absolute;
   }
 }
 
@@ -47,10 +47,10 @@ $drawer-width: 260px;
 
 @media (min-width: 1024px) {
   .admin-drawer {
-    // transform: translateX(0);
-    // position: sticky;
-  top: 64px;
-  height: calc(100vh - 64px);
+    position: sticky;
+    transform: none;
+    top: 70px;
+    height: calc(100vh - 70px);
   }
   .backdrop { display:none; }
 }
