--- a/src/app/components/pages/Home/home.component.html
+++ b/src/app/components/pages/Home/home.component.html
@@ -1,3 +1,3 @@
 <h2>Bienvenido a Cuentos de Killa</h2>
 <app-hero-banner></app-hero-banner>
-<app-cuentos-grid></app-cuentos-grid>
+<app-cuentos-page></app-cuentos-page>
