--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -44,3 +44,13 @@
   color: var(--btn-disabled-text);
   cursor: not-allowed;
 }
+
+.btn-success {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
