--- a/src/app/components/admin-drawer/admin-drawer.component.scss
+++ b/src/app/components/admin-drawer/admin-drawer.component.scss
@@ -35,6 +35,7 @@ $drawer-width: 260px;
   }
   &.open {
     transform: translateX(0);
+    z-index: 1300;
   }
 }
 
@@ -42,7 +43,13 @@ $drawer-width: 260px;
   position: fixed;
   inset: 0;
   background: rgba(0,0,0,.3);
-  z-index: 900;
+  z-index: 1250;
+}
+
+@media (max-width: 600px) {
+  .admin-drawer {
+    width: 80vw;
+  }
 }
 
 @media (min-width: 1024px) {
