--- a/src/app/components/pages/admin/cuento-form/cuento-form.html
+++ b/src/app/components/pages/admin/cuento-form/cuento-form.html
@@ -53,8 +53,8 @@
     <div class="error-mensaje" *ngIf="errorMensaje">{{ errorMensaje }}</div>
 
     <div class="acciones">
-      <button type="submit" class="aceptar">{{ isEditMode ? 'Actualizar' : 'Crear' }}</button>
-      <button type="button" class="cancelar" (click)="cancelar()">Cancelar</button>
+      <button type="submit" class="btn btn-primary">{{ isEditMode ? 'Actualizar' : 'Crear' }}</button>
+      <button type="button" class="btn btn-danger" (click)="cancelar()">Cancelar</button>
     </div>
   </form>
 </div>
