--- a/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.html
+++ b/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.html
@@ -2,7 +2,7 @@
   <h2>Gestión de Cuentos</h2>
 
   <div class="admin-acciones-globales">
-    <button (click)="abrirModalAgregarCuento()" class="boton-agregar">
+    <button (click)="abrirModalAgregarCuento()" class="btn btn-primary">
       <i class="fas fa-plus"></i> Agregar Nuevo Cuento
     </button>
   </div>
